--- a/frontend/web/tsconfig.json
+++ b/frontend/web/tsconfig.json
@@ -21,5 +21,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": ["templates"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
