--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest ./src",
+    "test:coverage": "jest ./src --coverage",
+    "test:watch": "jest ./src --watch --verbose"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -17,6 +20,10 @@
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.96",
+    "@swc/jest": "^0.2.29",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.7",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
@@ -30,6 +37,9 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
