--- a/frontend/mobile/pubspec.yaml
+++ b/frontend/mobile/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
   flutter_lints: ^2.0.0
+  mocktail: ^1.0.0
 
 flutter:
   uses-material-design: true
