--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -15,6 +15,7 @@
     "test:watch": "jest ./src --watch --verbose"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
