--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Init Hermit
         uses: cashapp/activate-hermit@v1
+        with:
+          cache: true
       - name: Get dependencies
         working-directory: ./frontend/mobile
         run: flutter pub get
