fix: minor fixes
    * Correct delete response header for go example from 'Put' to 'Delete'
    * Correct Justfile reference to 'frontend/web' to 'web'
    * Add slices package to replace ftl package that is now internal
    * Correct json serialization of product pricing from 'priceUSD' to 'priceUsd'

--- a/online-boutique/Justfile
+++ b/online-boutique/Justfile
@@ -4,4 +4,4 @@ dev:
 
 # Start the example web frontend for online-boutique
 web:
-  cd frontend/web && npm install && npm run dev
+  cd web && npm install && npm run dev
