fix: upgrade to latest FTL
There's still a weird issue:

```
🐚 ~/dev/ftl-examples $ ftl dev online-boutique/backend --recreate
info: Starting FTL with 1 controller(s)
info:currency: Building module
info:cart: Building module
info:ad: Building module
info:ad: Deploying module
info:currency: Deploying module
info:cart: Deploying module
info:payment: Building module
info:shipping: Building module
info:productcatalog: Building module
info:payment: Deploying module
warn: "checkout" build skipped because its dependency "shipping" failed to build
info:recommendation: Building module
info:productcatalog: Deploying module
info:recommendation: Deploying module
info:controller0: Deployed dpl-ad-1m5ckbhogm6feil5
info:controller0: Deployed dpl-currency-1flmrlirote5ta9r
info:controller0: Deployed dpl-recommendation-58ikzredh79ww5d6
info:controller0: Deployed dpl-payment-9n2robh5f3vfo4w
info:controller0: Deployed dpl-productcatalog-099pwzdrb9zvpkq
info:controller0: Deployed dpl-cart-23tfpvcga9c6l85r
info: Modules waiting to build: shipping, checkout
error: initial deploy failed: 14:3-3: ingress verb getQuote: couldn't resolve response body type currency.Money
```

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,3 +49,15 @@ jobs:
       - name: Test
         working-directory: ./online-boutique/web
         run: npm run test
+  backend:
+    name: Build Backend
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Init Hermit
+        uses: cashapp/activate-hermit@v1
+        with:
+          cache: true
+      - name: Build
+        run: ftl build --log-level=trace online-boutique
