--- a/kotlin/http/pom.xml
+++ b/kotlin/http/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <ftl.version>0.180.1</ftl.version>
+        <ftl.version>1.0-SNAPSHOT</ftl.version>
         <java.version>1.8</java.version>
         <kotlin.version>1.9.23</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
