--- a/online-boutique/mobile/pubspec.yaml
+++ b/online-boutique/mobile/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   flex_color_scheme: ^7.3.1
   flutter_hooks: ^0.20.3
-  google_fonts: ^6.1.0
+  google_fonts: 6.1.0
   hooks_riverpod: ^2.4.4
   http: ^1.1.0
   intl: ^0.18.1
