--- a/ftl-project.toml
+++ b/ftl-project.toml
@@ -1,5 +1,5 @@
-module-dirs = ["go", "online-boutique"]
+module-dirs = ["online-boutique"]
 ftl-min-version = "0.241.0"
 
 [global]
-[global.configuration]
+  [global.configuration]
