--- a/ftl-project.toml
+++ b/ftl-project.toml
@@ -1,4 +1,5 @@
-module-dirs = ["online-boutique"]
+name = "ftl-examples"
+module-dirs = ["online-boutique", "go"]
 ftl-min-version = "0.241.0"
 
 [global]
